# spline

./: .astylerc  CMakeLists.txt  README.md  spline.h
cmake/: splineConfig.cmake.in
doc/: Makefile  README.md  interpolate_avg.gp  literature.bib  positive_criteria.gp  spline.tex
examples/: Makefile  README.md  bench.cpp  cubic_root.cpp  demo.cpp  gsl_solve_cubic.c  interpol.cpp  interpol_alglib.cpp  plot.cpp  plot.gp  plot.sh  plot.txt  plot_alglib.cpp  plot_alglib.gp  plot_alglib.sh  plot_avg_preserv.cpp  plot_avg_preserv.gp  plot_avg_preserv.sh  plot_bspline.cpp  plot_bspline.gp  plot_bspline.sh  plot_parametric.cpp  plot_parametric.gp  plot_parametric.sh  simple_demo.cpp  stoptime.h
examples/tests/: compile_units.cpp  myfunc.h  myfunc1.cpp  myfunc2.cpp  simple_demo_c98.cpp  unit_tests.cpp
include/: spline.h
src/: spline.h
